# rust-latihan

./: Cargo.toml  README.md  categories.txt  db.sqlite
src/: main.rs
src/lat_02_struct/: animal.rs  creep.rs  lib.rs  pokemon.rs  start.rs  world.rs
src/lat_03_io/: mod.rs  start.rs  write.rs
src/lat_04_loop/: nilai.rs
src/lat_05_db/: connection.rs  db.rs  employee.rs  mod.rs
src/lat_05_sqlite/: connection.rs  db.rs  employee.rs
src/lat_06_aocday6/: day6.rs
src/lesson_02_struct/: lib.rs  pokemon.rs  start.rs
src/nilai/: mod.rs  nilai.rs
src/try_01_hello/: hello.rs
