[package]
name = "latihan"
version = "0.1.0"
edition = "2021"

[lib]
name = "pokemon"
path = "src/lat_02_struct/lib.rs"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled", "backup"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

